update: added new mongoconnection, added restadapter to client

--- a/client/app/templates/session.hbs
+++ b/client/app/templates/session.hbs
@@ -3,4 +3,9 @@
 <strong>{{description}}</strong>
 <strong>{{rating}}</strong>
 <strong>{{recommendation}}</strong>
+<ul>
+<label>Areas</label>
+{{#each area in areas}}
+	<li>{{area}}</li>
+{{/each}}
 <strong></strong>
