--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -1,3 +1,13 @@
 html, body {
   margin: 20px;
 }
+
+li {
+	list-style-type: none;
+}
+
+.button {
+	-moz-border-radius: 15px;
+	border-radius: 15px;
+	background-color: grey;
+}
