added put to ratings

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -1,6 +1,9 @@
 html, body {
   margin: 20px;
 }
+body {
+	display: flex;
+}
 
 li {
 	list-style-type: none;
@@ -10,4 +13,93 @@ li {
 	-moz-border-radius: 15px;
 	border-radius: 15px;
 	background-color: grey;
+}
+
+.InputAddOn {
+  /*display: flex;*/
+  margin-bottom: 1em;
+}
+
+.InputAddOn-field {
+  flex: 1;
+  &:not(:first-child) {
+    border-left: 0;
+  }
+  &:not(:last-child) {
+    border-right: 0;
+  }
+}
+
+.InputAddOn-item {
+  background-color: hsla(31, 15%, 50%, 0.1);
+  color: hsl(0, 0%, 40%);
+  font: inherit;
+  font-weight: normal;
+}
+
+.InputAddOn-field, .InputAddOn-item {
+  border: 1px solid hsla(31, 15%, 50%, 0.25);
+  padding: 0.5em 0.75em;
+  &:first-child {
+    border-radius: 2px 0 0 2px;
+  }
+  &:last-child {
+    border-radius: 0 2px 2px 0;
+  }
+}
+
+.rating {
+    float:left;
+}
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
+   follow these rules. Every browser that supports :checked also supports :not(), so
+   it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0,0,0,0);
+}
+
+.rating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:before {
+    content: '★ ';
+}
+
+.rating > input:checked ~ label {
+    color: #f70;
+    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > label:active {
+    position:relative;
+    top:2px;
+    left:2px;
 }
