update: ugly app

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -1,105 +1,113 @@
 html, body {
-  margin: 20px;
+    height: 100%;
 }
 body {
-	display: flex;
+    margin: 0;
+}
+
+ul {
+  margin: 0px !important;
 }
 
 li {
-	list-style-type: none;
+  list-style-type: none;
+}
+.flex-container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.row {
+    width: auto;
+    border: 0px;
+}
+.flex-item {
+    background-color: white;
+    padding: 5px 5px 5px 5px;
+    /*width: 98%;*/
+    /*height: 20px;*/
+    margin: 10px;
+    line-height: 20px;
+    color: grey;
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+}
+#session-abstract {
+  text-align: left;
+}
+.xbig-text {
+  font-size: 1.3em;
+  padding-left: 1em;
+  padding-right: 1em;
+  line-height: 2em;
+}
+.big-text {
+  font-size: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  line-height: 2em;
+}
+.medium-text {
+  font-size: 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
+  line-height: 2em;
+}
+.small-text {
+  font-size: 0.2em;
+  padding-left: 1em;
+  padding-right: 1em;
+  line-height: 2em;
+}
+#ratingfield {
+  padding: 0px !important;
+  width:99%;
+}
+.fullwidth {
+  width:99%;
+  margin: 0px;
+}
+.left {
+  text-align: left;
+  float:left;
+}
+#btn-submit-rating {
+  width:100%;
+  margin-left:0%;
+  background-color:green;
+}
+#ratings {
+  width: 100%;
+  padding: 0px !important;
+
+}
+.badge {
+  margin-left: 1em;
 }
 
-.button {
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	background-color: grey;
+#rating, #keytakeaway {
+  font-size: 0.8em;
+}
+.center {
+  text-align: center;
 }
 
-.InputAddOn {
-  /*display: flex;*/
-  margin-bottom: 1em;
+#new-comment {
+  width:100%;
+  font-size: 1em;
 }
 
-.InputAddOn-field {
-  flex: 1;
-  &:not(:first-child) {
-    border-left: 0;
-  }
-  &:not(:last-child) {
-    border-right: 0;
-  }
+#new-rating {
+  font-size: 1em;
 }
-
-.InputAddOn-item {
-  background-color: hsla(31, 15%, 50%, 0.1);
-  color: hsl(0, 0%, 40%);
-  font: inherit;
-  font-weight: normal;
-}
-
-.InputAddOn-field, .InputAddOn-item {
-  border: 1px solid hsla(31, 15%, 50%, 0.25);
-  padding: 0.5em 0.75em;
-  &:first-child {
-    border-radius: 2px 0 0 2px;
-  }
-  &:last-child {
-    border-radius: 0 2px 2px 0;
-  }
-}
-
-.rating {
-    float:left;
-}
-
-/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t 
-   follow these rules. Every browser that supports :checked also supports :not(), so
-   it doesn’t make the test unnecessarily selective */
-.rating:not(:checked) > input {
-    position:absolute;
-    top:-9999px;
-    clip:rect(0,0,0,0);
-}
-
-.rating:not(:checked) > label {
-    float:right;
-    width:1em;
-    padding:0 .1em;
-    overflow:hidden;
-    white-space:nowrap;
-    cursor:pointer;
-    font-size:200%;
-    line-height:1.2;
-    color:#ddd;
-    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:before {
-    content: '★ ';
-}
-
-.rating > input:checked ~ label {
-    color: #f70;
-    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
-    color: gold;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-    color: #ea0;
-    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
-}
-
-.rating > label:active {
-    position:relative;
-    top:2px;
-    left:2px;
+.grey {
+  color:grey;
 }
