--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,3 +1,2 @@
-<h2 id='title'>Welcome to Ember.js</h2>
-<p class="button">{{#link-to 'sessions'}}Sessions{{/link-to}}</p>
+<p class="nav nav-tabs nav-stacked">{{#link-to 'sessions'}}Sessions{{/link-to}}</p>
 {{outlet}}
