--- a/client/app/templates/session.hbs
+++ b/client/app/templates/session.hbs
@@ -1,34 +1,40 @@
-<h1>{{model.title}}</h1>
-<strong>Abstract</strong>
-<p>{{model.abstract}}</p>
-<label>Starts</label>
-<p>{{model.start_time}}</p>
-<label>Ends</label>
-<p>{{model.end_time}}</p>
-<div class="InputAddOn">
-  <form class="ratingform well" action="ratings" enctype='application/json'>
-    <label for="new-comment">Key takeaway</label>
-    <textarea id="new-comment" type="text" rows="3" class="InputAddOn-field comment" name='comment'></textarea>
-    <label for="new-rating">Rating (1-5)</label>
-    <select id="new-rating" class="InputAddOn-field rating" name='rating'>
-      <option selected></option>
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-    <br />
-    <input name='submit' class="btn-large"type='submit' {{action 'addRating'}}id="btn-submit-rating" >
-  </form>
+<div class="flex-container">
+  <div class="row">
+  <div class="flex-item session-data">
+    <h1>{{model.title}}</h1>
+    <p id="session-abstract" class="medium-text">{{model.abstract}}</p>
+    <label class="big-text">Starts</label>
+    <p class="big-text">{{model.start_time}}</p>
+    <label class="big-text">Ends</label>
+    <p class="big-text">{{model.end_time}}</p>
+  </div>
+  <div class="flex-item" id="ratingfield">
+    <form class="well" action="ratings" enctype='application/json'>
+      <label for="new-comment" class="medium-text" id="keytakeaway">KEY TAKEAWAY</label>
+      <textarea id="new-comment" type="text" rows="3" class="InputAddOn-field comment" name='comment'></textarea>
+      <label for="new-rating" class="medium-text" id="rating">Rating (1-5)</label>
+      <select id="new-rating" class="InputAddOn-field rating" name='rating'>
+        <option selected></option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+      <br />
+      <input name='submit' class="btn-large"type='submit' {{action 'addRating'}}id="btn-submit-rating" >
+    </form>
+  </div>
+  <br />
+  
+  <ul class="flex-item">
+  <h3>Other peoples impressions</h3>
+  {{#each model.ratings}}
+  <li class="well fullwidth-nomargin" id="ratings">
+  	<p class="medium-text left badge badge-inverse">{{rating}}/5</p>
+    <p class="medium-text left">{{comment}}</p>
+  </li>
+  {{/each}}
+  </ul>
+  </div>
 </div>
-<br />
-<h3>Other peoples impressions</h3>
-<ul>
-{{#each model.ratings}}
-<li class="ratings-item well">
-	<p>Grade: {{rating}}/5</p>
-  <p>Key takeaway: {{comment}}</p>
-</li>
-{{/each}}
-</ul>
