--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,2 +1,2 @@
-<p class="nav nav-tabs nav-stacked">{{#link-to 'sessions'}}Sessions{{/link-to}}</p>
+<p class="nav nav-tabs btn-large grey">{{#link-to 'sessions'}}Sessions{{/link-to}}</p>
 {{outlet}}
