--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -68,8 +68,8 @@ li {
   line-height: 2em;
 }
 #ratingfield {
+  margin: 1em 1em 1em 1em;
   padding: 0px !important;
-  width:99%;
 }
 .fullwidth {
   width:99%;
@@ -83,10 +83,10 @@ li {
   width:100%;
   margin-left:0%;
   background-color:green;
+  color: white;
 }
 #ratings {
-  width: 100%;
-  padding: 0px !important;
+
 
 }
 .badge {
@@ -110,4 +110,42 @@ li {
 }
 .grey {
   color:grey;
+}
+#time, #ses-time {
+  float: left;
+}
+
+#room, #ses-room {
+  float: right;
+}
+#time, #room {
+  font-size: 0.3em;
+}
+#total-rating {
+  color: green;
+}
+#time-and-place {
+  padding: 0px !important;
+  background-color: #f5f5f5;
+}
+#listitem-title {
+  background-color: #f5f5f5;
+}
+.filterbar {
+  text-align: center;
+  padding: 5px;
+  margin: 5px;
+ border-left:1px solid #f5f5f5;
+ width: 18%;
+ float:left;
+ 
+}
+a {
+  color: #605E5E!important;
+}
+
+#rater {
+  width: 100%;
+margin-left: 0px;
+padding-left: 0px;
 }
