--- a/client/app/templates/session.hbs
+++ b/client/app/templates/session.hbs
@@ -1,15 +1,14 @@
 <div class="flex-container">
   <div class="row">
   <div class="flex-item session-data">
+    <p id="ses-time" class="medium-text">{{model.time}} - {{model.time_end}}</p>
+    <p id="ses-room" class="medium-text">{{model.space_name}}</p>
+
     <h1>{{model.title}}</h1>
     <p id="session-abstract" class="medium-text">{{model.abstract}}</p>
-    <label class="big-text">Starts</label>
-    <p class="big-text">{{model.start_time}}</p>
-    <label class="big-text">Ends</label>
-    <p class="big-text">{{model.end_time}}</p>
   </div>
   <div class="flex-item" id="ratingfield">
-    <form class="well" action="ratings" enctype='application/json'>
+    <form class="well" id="rater" action="ratings" enctype='application/json'>
       <label for="new-comment" class="medium-text" id="keytakeaway">KEY TAKEAWAY</label>
       <textarea id="new-comment" type="text" rows="3" class="InputAddOn-field comment" name='comment'></textarea>
       <label for="new-rating" class="medium-text" id="rating">Rating (1-5)</label>
@@ -26,9 +25,17 @@
     </form>
   </div>
   <br />
+
+  <ul class="flex-item">
+  <div id="tot">
+    <li>Total rating</li>
+    <br>
+    <li class="well" id="total-rating">{{model.total_rating}}/100</li>
+  </div>
+  </ul>
   
   <ul class="flex-item">
-  <h3>Other peoples impressions</h3>
+  <span class="big-text center">User ratings</span>
   {{#each model.ratings}}
   <li class="well fullwidth-nomargin" id="ratings">
   	<p class="medium-text left badge badge-inverse">{{rating}}/5</p>
